posição do whats atualizada

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <form id="dados_Aluno">
           <div class="logo">
             <img
-              src="assets/projetoImep.webp"
+              src="assets/projetoImep.png"
               alt=""
               class="projeto mini_logos"
             />
 
             <img
-              src="assets/fraseConhecimento.webp"
+              src="assets/fraseConhecimento.png"
               alt="anima-ecossistema"
               class="conhecimento mini_logos"
             />
@@ -132,12 +132,22 @@
             <option value="Indicação">Indicação</option>
           </select>
 
-          <button id="enviar" type="submit">Enviar</button>
+          <div id="form_footer">
+            <button id="enviar" type="submit">Enviar</button>
+
+             <a 
+              href="https://wa.me/5511998983626?text=Formulário,%20mais%20informações!" 
+              target="_blank"
+              title="TWhatsapp"
+              class="whatsapp"
+            >
+              <img src="assets/whatsapp-logo-1_adobe_express.svg" alt="Whatsapp">
+            </a>
+          </div>
+          
         </form>
       </main>
-
-      <div class="whatsapp">
-        <a href="https://wa.me/5511998983626?text=Formulário,%20mais%20informações!" target="_blank" title="TWhatsapp" class="whatsapp_btn"><img src="assets/whatsapp-logo-1_adobe_express.svg" alt="Whatsapp"></a>
+       
       </div>
     </div>
 
